<?xml version="1.0"?>
<package>
  <name>lwr_description</name>
  <version>0.0.1</version>
  <description>Kuka LWR 4+ URDF</description>

  <maintainer email="hoarau.robotics@gmail.com">Antoine Hoarau</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>robot_state_publisher</run_depend>

  <export>
  </export>
</package>
