<?xml version='1.0' encoding='ASCII'?>
<package>
  <name>lwr_ikfast</name>
  <version>1.0.0</version>
  <description>The lwr_ikfast package</description>

  <maintainer email="hoarau.robotics@gmail.com">Antoine Hoarau</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <moveit_core plugin="${prefix}/lwr_arm_moveit_ikfast_plugin_description.xml"/>
  </export>
  <build_depend>moveit_core</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pluginlib</build_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>liblapack-dev</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>pluginlib</run_depend>
</package>
