<?xml version="1.0"?>
<package>
  <name>lwr_state_publisher</name>
  <version>0.0.0</version>
  <description>The lwr_state_publisher package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="hoarau@todo.todo">hoarau</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/lwr_state_publisher</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kuka_lwr_fri</build_depend>
  <build_depend>rtt</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>rtt_rosclock</build_depend>
  <build_depend>rtt_roscomm</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rtt_ros_kdl_tools</build_depend>
  <run_depend>rtt_ros_kdl_tools</run_depend>
  <run_depend>kuka_lwr_fri</run_depend>
  <run_depend>rtt</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_rosclock</run_depend>
  <run_depend>rtt_roscomm</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <build_depend>ocl</build_depend>
  <build_depend>cmake_modules</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rtt_ros>
      <plugin_depend>rtt_std_msgs</plugin_depend>
      <plugin_depend>rtt_geometry_msgs</plugin_depend>
      <plugin_depend>rtt_rosclock</plugin_depend>
      <plugin_depend>rtt_tf</plugin_depend>
      <plugin_depend>rtt_rosparam</plugin_depend>
      <plugin_depend>rtt_roscomm</plugin_depend>
      <plugin_depend>rtt_rospack</plugin_depend>
    </rtt_ros>
  </export>
</package>
