<?xml version="1.0"?>
<package>
  <name>rqt_lwr</name>
  <version>1.0.0</version>
  <description>
      GUI for the Kuka LWR 4+
  </description>

  <maintainer email="hoarau@isir.upmc.fr">Antoine Hoarau</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
