<?xml version="1.0"?>
<package>
  <name>rtt_lwr</name>
  <version>2.2.0</version>
  <description>The rtt_lwr package</description>

  <author email="hoarau@isir.upmc.fr">Antoine Hoarau</author>
  <maintainer email="hoarau.robotics@gmail.com">Antoine Hoarau</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>lwr_description</run_depend>
  <run_depend>rtt_lwr_abstract</run_depend>
  <run_depend>kuka_lwr_fri</run_depend>
  <run_depend>lwr_fri</run_depend>
  <run_depend>lwr_utils</run_depend>
  <run_depend>rqt_lwr</run_depend>

  <export>
  </export>
</package>
