<?xml version="1.0"?>
<package>
  <name>rtt_lwr_abstract</name>
  <version>1.0.1</version>
  <description>Orocos lwr_abstract Component package</description>

  <maintainer email="hoarau.robotics@gmail.com">Antoine Hoarau</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>lwr_fri</build_depend>
  <build_depend>kuka_lwr_fri</build_depend>
  <build_depend>rtt_roscomm</build_depend>
  <build_depend>rtt_rosparam</build_depend>
  <build_depend>rtt_rosclock</build_depend>
  
  <run_depend>rtt_roscomm</run_depend>
  <run_depend>rtt_rosparam</run_depend>
  <run_depend>rtt_rosclock</run_depend>
  <run_depend>rtt</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>kdl_conversions</run_depend>
  <run_depend>lwr_fri</run_depend>

  <export>
    <rtt_ros>
      <plugin_depend>rtt_std_msgs</plugin_depend>
      <plugin_depend>rtt_diagnostic_msgs</plugin_depend>
      <plugin_depend>rtt_geometry_msgs</plugin_depend>
      <plugin_depend>rtt_sensor_msgs</plugin_depend>
      <plugin_depend>kdl_typekit</plugin_depend>
      <plugin_depend>eigen_typekit</plugin_depend>
      <plugin_depend>rtt_rosclock</plugin_depend>
      <plugin_depend>rtt_tf</plugin_depend>
      <plugin_depend>rtt_rosparam</plugin_depend>
      <plugin_depend>rtt_roscomm</plugin_depend>
      <plugin_depend>rtt_rospack</plugin_depend>
    </rtt_ros>
  </export>
</package>
