<?xml version="1.0"?>
<package>
  <name>rtt_lwr_gazebo</name>
  <version>0.1.2</version>
  <description>The rtt_lwr_gazebo package</description>

  <maintainer email="hoarau.robotics@gmail.com">Antoine Hoarau</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>ocl</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>rtt_roscomm</build_depend>
  <build_depend>rtt_rosclock</build_depend>
  <build_depend>rtt_gazebo_deployer</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>gazebo</run_depend>
  <run_depend>rtt_roscomm</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>rtt_rosclock</run_depend>
  <run_depend>rtt_gazebo_deployer</run_depend>

  <export>
  </export>
</package>
