<?xml version="1.0"?>
<package>
  <name>rtt_lwr_gazebo</name>
  <version>1.0.0</version>
  <description>The rtt_lwr_gazebo package</description>

  <author email="jbo@jhu.edu">jbohren</author>
  <maintainer email="hoarau.robotics@gmail.com">Antoine Hoarau</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>ocl</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>rtt_roscomm</build_depend>
  <build_depend>rtt_rosclock</build_depend>
  <build_depend>rtt_gazebo_deployer</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>std_srvs</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>rtt_roscomm</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>rtt_rosclock</run_depend>
  <run_depend>rtt_gazebo_deployer</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rtt_gazebo</run_depend>

  <export>
      <rtt_ros>
      <plugin_depend>rtt_std_msgs</plugin_depend>
      <plugin_depend>rtt_std_srvs</plugin_depend>
      <plugin_depend>rtt_diagnostic_msgs</plugin_depend>
      <plugin_depend>rtt_geometry_msgs</plugin_depend>
      <plugin_depend>rtt_sensor_msgs</plugin_depend>
      <plugin_depend>kdl_typekit</plugin_depend>
      <plugin_depend>eigen_typekit</plugin_depend>
      <plugin_depend>rtt_rosclock</plugin_depend>
      <plugin_depend>rtt_rosparam</plugin_depend>
      <plugin_depend>rtt_roscomm</plugin_depend>
      <plugin_depend>rtt_rospack</plugin_depend>
      <plugin_depend>rtt_nav_msgs</plugin_depend>
      </rtt_ros>
  </export>
</package>
